docusaurus: Convert 06.contribute/10.packaging_apps

--- a/docs/06.contribute/10.packaging_apps/10.manifest/index.mdx
+++ b/docs/06.contribute/10.packaging_apps/10.manifest/index.mdx
@@ -1,18 +1,15 @@
 ---
-title: 'Writing the app manifest'
-template: docs
-taxonomy:
-    category:
-        - docs
-routes:
-    default: /packaging_manifest
+title: Writing the app manifest
+sidebarCollapsed: false
 ---
 
 The app's `manifest.toml` can be seen as the ID card of the app. It declares various basic metadata such as the id, name, description of the app, its version, install questions to be asked to the admin prior to installation, etc.
 
 In this page, the data are described according to a somewhat dummy app called `helloworld`
 
-!!! If you want to convert an application from the packaging v1 to v2 format, [please see here](/packaging_v2)!
+:::tip
+If you want to convert an application from the packaging v1 to v2 format, [please see here](/packaging_v2)!
+:::
 
 ## General information
 
