--- a/docs/06.contribute/10.packaging_apps/60.advanced/30.sso_ldap_integration.md
+++ b/docs/06.contribute/10.packaging_apps/60.advanced/30.sso_ldap_integration.md
@@ -1,10 +1,5 @@
 ---
 title: SSO/LDAP integration
-template: docs
-taxonomy:
-    category: docs
-routes:
-  default: '/packaging_sso_ldap_integration'
 ---
 
 One powerful aspect of YunoHost is that apps are meant to be integrated with the SSO/LDAP stack, such that users logged in on YunoHost's user portal can be directly logged in each app without having to create an account in each of them nor having to re-log in each app every time.
@@ -37,9 +32,11 @@ TODO/FIXME: moar explanations? What is missing?
 
 ## SSO integration
 
-This documentation apply to YunoHost >=12. On YunoHost <12 the header was a bit different but the idea was the same.
+This documentation apply to YunoHost\>=12. On YunoHost \<12 the header was a bit different but the idea was the same.
 
 Internally, SSOwat will on-the-fly inject theses different headers:
+
+<!-- TODO: better table -->
 
 |Name|Description|Protected over header injection from clients (a client try with a request to override the header and be logged in with a different user)|Header name for app which provide HTTP server and nginx transfert the request|How to get with php App|
 |----|----|----|----|----|
