--- a/docs/06.contribute/10.packaging_apps/60.advanced/50.packaging_apps_hooks.md
+++ b/docs/06.contribute/10.packaging_apps/60.advanced/50.packaging_apps_hooks.md
@@ -1,10 +1,5 @@
 ---
 title: Hooks
-template: docs
-taxonomy:
-    category: docs
-routes:
-  default: '/packaging_apps_hooks'
 ---
 
 YunoHost includes a hook mechanism triggered on a lot of operation changing the system. You can use this mechanism in order to extend the behaviour of a YunoHost command.
@@ -13,7 +8,9 @@ The most obvious case is adding a user. If you had a `post_user_create` hook, th
 
 ## How to add a custom hook on a specific instance
 
-!!! Below we imagine we want to run a command after each user creation to add the user to samba user.
+:::tip
+Below we imagine we want to run a command after each user creation to add the user to samba user.
+:::
 
 You should create a directory with the name of the hooks into `/etc/yunohost/hooks.d/`:
 
@@ -53,7 +50,8 @@ In the hooks dir, create a bash script called with the type of hook you want to 
 
 #### post_user_create
 
-[details summary="<i>Triggered after user creation</i>" class="helper-card-subtitle text-muted"]
+<details>
+<summary><i>Triggered after user creation</i></summary>
 
 This hook is run at the end of the command `yunohost user create` or equivalent action in webadmin.
 
@@ -90,11 +88,12 @@ The admin of $domain
 echo $message | mail -s "Welcome on $domain !" $YNH_USER_MAIL
 ```
 
-[/details]
+</details>
 
 #### post_user_delete
 
-[details summary="<i>Triggered at the end of user deletion</i>" class="helper-card-subtitle text-muted"]
+<details>
+<summary><i>Triggered at the end of user deletion</i></summary>
 
 This hook is run at the end of the command `yunohost user delete` or equivalent action in webadmin.
 
@@ -115,17 +114,20 @@ This hook is run at the end of the command `yunohost user delete` or equivalent 
 #!/bin/bash
 ```
 
-[/details]
+</details>
 
 ### post_user_update
 
-[details summary="<i>Triggered at the end of the user update</i>" class="helper-card-subtitle text-muted"]
+<details>
+<summary><i>Triggered at the end of the user update</i></summary>
 
 This hook is run at the end of the command `yunohost user update` or equivalent action in webadmin.
 
 #### Environment variables
 
-! Only arguments given to the cli/api are given as environment variable.
+:::warning
+Only arguments given to the cli/api are given as environment variable.
+:::
 
 - YNH_USER_USERNAME: The username of the updated user
 - YNH_USER_FIRSTNAME: The firstname of the updated user ([should be removed in future](https://github.com/YunoHost/issues/issues/296))
@@ -156,11 +158,12 @@ If you have not asked for changing your password, you probably should contact th
 echo $message | mail -s "Your password has been changed on $domain !" $YNH_USER_USERNAME
 ```
 
-[/details]
+</details>
 
 ### post_app_addaccess
 
-[details summary="<i>Triggered after adding a permission to users or groups </i>" class="helper-card-subtitle text-muted"]
+<details>
+<summary><i>Triggered after adding a permission to users or groups </i></summary>
 
 This hook is run at the end of the command `yunohost user permission add` or equivalent action in webadmin.
 
@@ -177,11 +180,12 @@ This hook is run at the end of the command `yunohost user permission add` or equ
 
 #### Examples
 
-[/details]
+</details>
 
 ### post_app_removeaccess
 
-[details summary="<i>Triggered after removing a pemission to users or groups</i>" class="helper-card-subtitle text-muted"]
+<details>
+<summary><i>Triggered after removing a pemission to users or groups</i></summary>
 
 This hook is run at the end of the command `yunohost user permission remove` or equivalent action in webadmin.
 
@@ -198,13 +202,14 @@ This hook is run at the end of the command `yunohost user permission remove` or 
 
 #### Examples
 
-[/details]
+</details>
 
 ## Domain, certificates and DNS
 
 ### post_domain_add
 
-[details summary="<i>Triggered at the end of the domain add operation</i>" class="helper-card-subtitle text-muted"]
+<details>
+<summary><i>Triggered at the end of the domain add operation</i></summary>
 
 This hook is run at the end of the command `yunohost domain add` or equivalent action in webadmin.
 
@@ -224,11 +229,12 @@ This hook is run at the end of the command `yunohost domain add` or equivalent a
 
 ```
 
-[/details]
+</details>
 
 ### post_domain_remove
 
-[details summary="<i>Triggered after removing the domain</i>" class="helper-card-subtitle text-muted"]
+<details>
+<summary><i>Triggered after removing the domain</i></summary>
 
 This hook is run at the end of the command `yunohost domain remove` or equivalent action in webadmin.
 
@@ -242,11 +248,12 @@ This hook is run at the end of the command `yunohost domain remove` or equivalen
 
 #### Examples
 
-[/details]
+</details>
 
 ### post_cert_update
 
-[details summary="<i>Triggered after Let's encrypt certificate update</i>" class="helper-card-subtitle text-muted"]
+<details>
+<summary><i>Triggered after Let's encrypt certificate update</i></summary>
 
 This hook is run at the end of the command `yunohost domain cert update` or equivalent action in webadmin.
 
@@ -267,11 +274,12 @@ This hook is run at the end of the command `yunohost domain cert update` or equi
 systemctl restart gemserv
 ```
 
-[/details]
+</details>
 
 ### custom_dns_rules
 
-[details summary="<i>Customized your DNS rules for your domains</i>" class="helper-card-subtitle text-muted"]
+<details>
+<summary><i>Customized your DNS rules for your domains</i></summary>
 
 This hook is run at the end of the command `yunohost domain dns suggest` or equivalent action in webadmin.
 
@@ -317,13 +325,14 @@ fi
 
 ```
 
-[/details]
+</details>
 
 ## Apps
 
 ### post_app_change_url
 
-[details summary="<i>Triggered after an app has changed of URL</i>" class="helper-card-subtitle text-muted"]
+<details>
+<summary><i>Triggered after an app has changed of URL</i></summary>
 
 This hook is run at the end of the command `yunohost app change-url` or equivalent action in webadmin.
 
@@ -340,11 +349,12 @@ This hook is run at the end of the command `yunohost app change-url` or equivale
 
 #### Examples
 
-[/details]
+</details>
 
 ### post_app_upgrade
 
-[details summary="<i>Triggered on app upgrade</i>" class="helper-card-subtitle text-muted"]
+<details>
+<summary><i>Triggered on app upgrade</i></summary>
 
 This hook is run at the end of the command `yunohost app upgrade` or equivalent action in webadmin.
 
@@ -381,11 +391,12 @@ fi
 
 ```
 
-[/details]
+</details>
 
 ### post_app_install
 
-[details summary="<i>Triggered at the end of an app installation</i>" class="helper-card-subtitle text-muted"]
+<details>
+<summary><i>Triggered at the end of an app installation</i></summary>
 
 This hook is run at the end of the command `yunohost app install` or equivalent action in webadmin.
 
@@ -404,11 +415,12 @@ This hook is run at the end of the command `yunohost app install` or equivalent 
 
 #### Examples
 
-[/details]
+</details>
 
 ### post_app_remove
 
-[details summary="<i>Triggered after removing an app</i>" class="helper-card-subtitle text-muted"]
+<details>
+<summary><i>Triggered after removing an app</i></summary>
 
 This hook is run at the end of the command `yunohost app remove` or equivalent action in webadmin.
 
@@ -427,13 +439,14 @@ This hook is run at the end of the command `yunohost app remove` or equivalent a
 
 #### Examples
 
-[/details]
+</details>
 
 ## Backup / Restore
 
 ### backup
 
-[details summary="<i>Add some files to backup</i>" class="helper-card-subtitle text-muted"]
+<details>
+<summary><i>Add some files to backup</i></summary>
 
 This hook is run at the end of the command `yunohost backup create` or equivalent action in webadmin.
 
@@ -478,11 +491,12 @@ ynh_backup "/etc/yunohost/hooks.d/restore/99-conf_custom"
 
 ```
 
-[/details]
+</details>
 
 ### restore
 
-[details summary="<i>Restore some files</i>" class="helper-card-subtitle text-muted"]
+<details>
+<summary><i>Restore some files</i></summary>
 
 This hook is run at the end of the command `yunohost backup restore` or equivalent action in webadmin.
 
@@ -526,11 +540,12 @@ ynh_restore_file "/etc/yunohost/hooks.d/restore/99-conf_custom"
 
 ```
 
-[/details]
+</details>
 
 ### backup_method
 
-[details summary="<i>Define a new way to backup and restore files</i>" class="helper-card-subtitle text-muted"]
+<details>
+<summary><i>Define a new way to backup and restore files</i></summary>
 
 This hook is run during the command `yunohost backup create` or equivalent action in webadmin.
 
@@ -590,13 +605,14 @@ exit 0
 
 ```
 
-[/details]
+</details>
 
 ## Configuration and firewall
 
 ### post_iptable_rules
 
-[details summary="<i>Triggered after reloaded the firewall rules</i>" class="helper-card-subtitle text-muted"]
+<details>
+<summary><i>Triggered after reloaded the firewall rules</i></summary>
 
 This hook is run at the end of the command `yunohost firewall reload` or equivalent action in webadmin.
 
@@ -619,11 +635,12 @@ iptables -A OUTPUT -p tcp --dport 25 -m owner --uid-owner postfix -j ACCEPT
 iptables -A OUTPUT -p tcp --dport 25 -m tcp -j REJECT --reject-with icmp-port-unreachable
 ```
 
-[/details]
+</details>
 
 ### conf_regen
 
-[details summary="<i>Change configuration suggested as default config in regen-conf mechanism</i>" class="helper-card-subtitle text-muted"]
+<details>
+<summary><i>Change configuration suggested as default config in regen-conf mechanism</i></summary>
 
 This hook is run during the command `yunohost tools regen-conf` or equivalent action in webadmin.
 
@@ -660,4 +677,4 @@ echo '
 compatibility_level = 2' >> $postfix_conf
 ```
 
-[/details]
+</details>
