--- a/docs/06.contribute/10.packaging_apps/60.advanced/70.packaging_v2.md
+++ b/docs/06.contribute/10.packaging_apps/60.advanced/70.packaging_v2.md
@@ -1,11 +1,5 @@
 ---
-title: 'Packaging v2'
-template: docs
-taxonomy:
-    category:
-        - docs
-routes:
-    default: /packaging_v2
+title: Packaging v2
 ---
 
 Packaging v2 is a major improvement for the packaging introduced in YunoHost 11.1
@@ -23,7 +17,7 @@ However, this "v2" is not the end of the story and should be seen as an intermed
 
 ### Adapting a v1 app to v2
 
-A script is available in <https://github.com/YunoHost/apps/tree/master/tools/packaging_v2> and will attempt to convert what it can from the v1 format to the v2 format, in particular:
+A script is available in [the apps_tools repository](https://github.com/YunoHost/apps_tools/tree/main/packaging_v2) and will attempt to convert what it can from the v1 format to the v2 format, in particular:
 
 - initializing a `manifest.toml` and prefilling it with info scrapped from the various scripts
 - comment out now-unecessary lines in the various scripts
