--- a/docs/06.contribute/10.packaging_apps/90.policy.mdx
+++ b/docs/06.contribute/10.packaging_apps/90.policy.mdx
@@ -1,10 +1,6 @@
 ---
+sidebar_label: Apps catalog policy
 title: YunoHost's policy regarding the apps included in the official catalog
-template: docs
-taxonomy:
-    category: docs
-routes:
-  default: '/packaging_policy'
 ---
 
 ### License
