--- a/docs/06.contribute/10.packaging_apps/60.advanced/60.advanced_packagers.md
+++ b/docs/06.contribute/10.packaging_apps/60.advanced/60.advanced_packagers.md
@@ -1,10 +1,5 @@
 ---
 title: Advanced packagers
-template: docs
-taxonomy:
-    category: docs
-routes:
-  default: '/advanced_packagers'
 ---
 
 Here comes the time:
@@ -54,7 +49,7 @@ In addition, it's helpfull to have several domains names for each YunoHost, for 
   - test32.mydomain.org
   - test33.mydomain.org
 
-With that you will be able to install two apps on the same YunoHost first one at <https://test11.mydomain.org> and a second app at <https://test12.mydomain.org> (let say the first app is nextcloud_ynh the second one is collabora_ynh or onlyoffice_ynh)
+With that you will be able to install two apps on the same YunoHost first one at `https://test11.mydomain.org` and a second app at `https://test12.mydomain.org` (let say the first app is nextcloud_ynh the second one is collabora_ynh or onlyoffice_ynh)
 
 When your infrastructure is up and ready, you will have to do snapshots of each VMs/LXCs. Doing that, you will be able to revert back to an happy and healthy YunoHost after doing install/backup/restore/upgrade of and app...
 
